fix direction filter drag on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -403,9 +403,9 @@ ul.no-style {
 }
 .knob-container, .knob-container * {
     box-sizing: content-box;
+    touch-action: none;
 }
 #knob-toggle:not(:checked) ~ .knob-container {
-    pointer-events: none;
     opacity: 0.5;
 }
 #knob-toggle {
